--- a/cssfile/style.css
+++ b/cssfile/style.css
@@ -9,7 +9,6 @@ html{
   }
 body{
     overflow-x: hidden;
-
 }
 .container-fluid{ 
     position:relative; 
@@ -33,15 +32,20 @@ div.main1{
     top:0;
     left:0;
     z-index:1;
-    width: 100%;
+    height: 100vh;
+}
+div.mainvid{
+    height: 100vh !important;
 }
 video{
-    width: 100%;
+    height: 100vh;
     background-attachment: fixed;
+    width: 100%;
+    object-fit: cover; 
 }
 div.movedown{
-    margin-top: 17%;
-    margin-left: 14%;
+    margin-top: 45%;
+    margin-left: 40%;
 }
 p.heading{
     font-family: Asul;
@@ -50,6 +54,7 @@ p.heading{
     letter-spacing: 5px;
     font-size:5rem;
     text-transform: uppercase;
+    width: 600px;
 }
 div.center{
     margin-top: 10%;
@@ -91,6 +96,7 @@ p.note{
     color:black;
     font-size: 20px;
     font-family: Asul;
+    justify-content:center;
 }
 img.tohover{
     display: none;
@@ -106,7 +112,7 @@ img.hover:hover + img.tohover{
 }
 div.design:hover{
     transform: rotate(-1.5deg);
-    box-shadow: inset 0 0 0 15px #301B34;
+    box-shadow: inset 0 0 0 10px #301B34;
     transition: 0.5s ease-in-out;
 }
 progress {
@@ -324,6 +330,9 @@ div.card:hover{
     label.social{
         font-size: 4rem;
     }
+    nav.navbar-custom{
+        background-color: #26172C !important;
+    }
 }
 
 @media screen and (max-width:760px){
@@ -339,6 +348,14 @@ div.card:hover{
     p.note{
         font-size: 18px;
     }
+    label.skill:hover + img.proj{
+        display:none;
+    }
+    div.design:hover{
+        transform: rotate(0deg);
+        box-shadow: inset 0 0 0 0px #301B34;
+        transition: 0.5s ease-in-out;
+    }
 }
 @media screen and (max-width:380px){
     div.card{
@@ -346,5 +363,8 @@ div.card:hover{
     }
     h1.project-title{
         font-size: 1.5rem;
+    }
+    p.note{
+        font-size: 16px;
     }
 }
