--- a/cssfile/style.css
+++ b/cssfile/style.css
@@ -333,18 +333,21 @@ div.card:hover{
     nav.navbar-custom{
         background-color: #26172C !important;
     }
+    div.movedown{
+        margin-left:14%;
+    }
 }
 
 @media screen and (max-width:760px){
     p.heading{
-        font-size: 1.5rem;
+        width:400px;
+    }
+    div.movedown{
+        margin-top: 70%;
     }
 
 }
 @media screen and (max-width:560px){
-    p.heading{
-        font-size: 1rem;
-    }
     p.note{
         font-size: 18px;
     }
@@ -357,7 +360,23 @@ div.card:hover{
         transition: 0.5s ease-in-out;
     }
 }
+@media screen and (max-width:560px){
+    p.heading{
+        width: 300px;
+        font-size: 2rem;
+    }
+    div.movedown{
+        margin-top: 90%;
+        margin-left: 20%;
+    }
+
+}
 @media screen and (max-width:380px){
+    p.heading{
+        font-size: 1.7rem;
+        width: 200px;
+        margin-top: 100%;
+    }
     div.card{
         width: 17rem;
     }
