--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@ body {
         'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
+}
+
+html {
+    overflow-x: hidden;
 }
 
 code {
